--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,26 @@
 <h1>{{title}}</h1>
-<nav></nav>
+<nav>{{navegador}}
+    <ul>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+            
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+        <li>
+
+        </li>
+    </ul>
+</nav>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
