--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
 <nav>{{navegador}}
     <ul>
         <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
             
+        </li>
+        <li>
+            {{inicio}}
+        </li>
+        <li>
+
         </li>
         <li>
 
