--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,42 @@
-<h1>{{title}}</h1>
-<nav>{{navegador}}
-    <ul>
-        <div>
-            <li>
-                
-            </li>
-            <li>
-                {{inicio}}
-            </li>
-            <li>
-                {{camaras}}
-            </li>
-            <li>
-                {{tripodes}}
-            </li>
-            <li>
-                {{sobre}}
-            </li>
-            <li>
-                <div class="dropdown">
-                    <button class="dropbtn" onclick="myFunction()">Dropdown
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div id="myDropdown" class="dropdown-content">
-                        <a href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                    </div>
-                </div>
-            </li>
+<h1>{{ title }}</h1>
+<nav>
+  {{ navegador }}
+  <ul>
+    <div>
+      <li></li>
+      <li>
+        {{ inicio }}
+      </li>
+      <li>
+        {{ camaras }}
+      </li>
+      <li>
+        {{ tripodes }}
+      </li>
+      <li>
+        {{ sobre }}
+      </li>
+      <li>
+        <div class="dropdown">
+          <button class="dropbtn" onclick="myFunction()">
+            Dropdown
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="#">1a</a>
+            <a href="#">2a</a>
+            <a href="#">3a</a>
+          </div>
         </div>
-        <div>
-            <input type="text" placeholder="Search">
-            <button type="submit">Search</button>
-        </div>
-    </ul>
+      </li>
+    </div>
+    <li>
+      <div>
+        <input type="text" placeholder="Search" />
+        <button type="submit">Search</button>
+      </div>
+    </li>
+  </ul>
 </nav>
 
 <!-- 
