--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,29 +1,51 @@
-.dropdown{
-    float: left;
-    overflow: hidden;
+nav ul li {
+  display: inline-block;
+  color: white;
 }
-.dropdown .dropbtn{
-    /*cursor: pointer;*/
-    font-size: 10px;
-    border: none;
-    outline: none;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
+ul div {
+  display: inline-block;
 }
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: rgb(169, 84, 209);
+li {
+  background-color: rgb(100, 54, 228);
+  padding: 2px;
+}
+li:hover {
+  background-color: rgb(143, 137, 226);
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown .dropbtn {
+  font-size: 15px;
+  border: none;
+  outline: none;
+  padding: 2px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  color: white;
+}
+.navbar a:hover,
+.dropdown:hover .dropbtn,
+.dropbtn:focus,
+.dropdown-content {
+  background-color: rgb(169, 84, 209);
+  color: white;
+  display: block;
+  z-index: 1;
 }
 .dropdown-content a {
-    float: none;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
+  position: absolute;
+  float: none;
+  padding: 10px 15px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
 }
-.dropdown-content a:hover{
-    background-color: rgb(161, 133, 154);
+.dropdown-content a:hover {
+  background-color: rgb(161, 133, 154);
+  display: block;
 }
 /*
 Copyright Google LLC. All Rights Reserved.
