--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
   {{ navegador }}
   <ul>
     <div>
-      <li></li>
+      <li>
+        {{ imagen }}
+      </li>
       <li>
         {{ inicio }}
       </li>
@@ -20,7 +22,7 @@
         <div class="dropdown">
           <button class="dropbtn" onclick="myFunction()">
             Dropdown
-            <i class="fa fa-caret-down"></i>
+            <!--<i class="fa fa-caret-down"></i>-->
           </button>
           <div id="myDropdown" class="dropdown-content">
             <a href="#">1a</a>
