--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{ title }}</h1>
+<!--<h1>{{ title }}</h1>-->
 <nav>
   {{ navegador }}
   <ul>
@@ -20,11 +20,8 @@
       </li>
       <li>
         <div class="dropdown">
-          <button class="dropbtn" onclick="myFunction()">
-            Dropdown
-            <!--<i class="fa fa-caret-down"></i>-->
-          </button>
-          <div id="myDropdown" class="dropdown-content">
+          <button class="dropbtn" onclick="myFunction()">Dropdown</button>
+          <div id="" class="dropdown-content">
             <a href="#">1a</a>
             <a href="#">2a</a>
             <a href="#">3a</a>
