--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,7 +32,7 @@ li:hover {
 .dropdown-content {
   background-color: rgb(169, 84, 209);
   color: white;
-  display: block;
+  display: none;
   position: absolute;
 }
 .dropdown-content a {
