--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,7 @@ li {
 }
 li:hover {
   background-color: rgb(143, 137, 226);
+  cursor: pointer;
 }
 .dropdown {
   position: relative;
@@ -44,6 +45,7 @@ li:hover {
 .dropdown-content a:hover {
   background-color: rgb(161, 133, 154);
   display: block;
+  color: white;
 }
 /*
 Copyright Google LLC. All Rights Reserved.
