--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+nav {
+  position: fixed;
+  top: 0;
+}
 nav ul li {
   display: inline-block;
   color: white;
@@ -8,7 +12,6 @@ ul div {
 }
 li {
   background-color: rgb(25, 37, 64);
-  padding: 2px;
 }
 li:hover {
   background-color: rgb(143, 137, 226);
@@ -22,7 +25,6 @@ li:hover {
   font-size: 15px;
   border: none;
   outline: none;
-  padding: 1px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -48,6 +50,7 @@ li:hover {
   display: block;
   color: white;
 }
+
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
