--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div>
       <li>
         {{ imagen }}
-        <img src="./logo-politecnics.gif" alt="logo" />
+        <img src="./components/logo-politecnics.gif" alt="logo" />
       </li>
       <li>
         {{ inicio }}
