--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <ul>
     <div>
       <li>
-        {{ imagen }}
+        <!--{{ imagen }}-->
         <img src="./components/logo-politecnics.gif" alt="logo" />
       </li>
       <li>
