--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,7 @@
   <ul>
     <div>
       <li>
-        <!--{{ imagen }}-->
-        <img src="./components/logo_politecnics.gif" alt="logo" />
+        <img src="./components/logo_politecnics.jfif" alt="logo" />
       </li>
       <li>
         {{ inicio }}
