--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <ul>
     <div>
       <li>
+        <!--{{imagen}}-->
         <img src="./components/logo_politecnics.jfif" alt="logo" />
       </li>
       <li>
@@ -21,7 +22,7 @@
       <li>
         <div class="dropdown">
           <button class="dropbtn" onclick="myFunction()">Dropdown</button>
-          <div id="" class="dropdown-content">
+          <div id="dropdown-content" class="dropdown-content">
             <a href="#">1a</a>
             <a href="#">2a</a>
             <a href="#">3a</a>
